[package]
name = "direkuta"
version = "0.1.0"
authors = ["Ian Cronkright <txurtian@yahoo.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

description = "A fast REST focused web framework"
homepage = "https://gitlab.com/akibisuto/direkuta"
documentation = "https://docs.rs/direkuta"
repository = "https://gitlab.com/akibisuto/direkuta"

keywords = ["http", "hyper", "rest", "json"]
categories = ["network-programming", "web-programming::http-server"]

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[dependencies]
futures = "0.1"
http = "0.1"
hyper = "0.12"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[[example]]
name = "captures"
path = "examples/captures.rs"

[[example]]
name = "hello"
path = "examples/hello.rs"