[package]
name = "direkuta"
version = "0.1.1-beta"
authors = ["Ian Cronkright <txurtian@yahoo.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"

description = "A fast REST focused web framework"
homepage = "https://gitlab.com/akibisuto/direkuta"
documentation = "https://docs.rs/direkuta"
repository = "https://gitlab.com/akibisuto/direkuta"

keywords = ["http", "hyper", "json", "tera", "rest"]
categories = ["network-programming", "web-programming::http-server"]

include = [
  "Cargo.toml",
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "src/**/*"
]

[badges]
gitlab = { repository = "akibisuto/direkuta", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
futures = "0.1"
http = "0.1"
hyper = "0.12"
indexmap = "1.0"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

# Optional
tera = { version = "0.11", optional = true }

[[example]]
name = "captures"
path = "examples/captures.rs"

[[example]]
name = "headers"
path = "examples/headers.rs"

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "json"
path = "examples/json.rs"

[features]
default = ["template"]
template = ["tera"]
